--- a/package.json
+++ b/package.json
@@ -1,156 +1,156 @@
 {
-	"name": "airbear-pwa",
-	"version": "2.0.0",
-	"license": "MIT",
-	"type": "module",
-	"scripts": {
-		"build": "next build",
-		"db:push": "drizzle-kit push",
-		"deploy": "npm run verify && npm run deploy:vercel",
-		"deploy:production": "bash deploy.sh",
-		"deploy:now": "bash scripts/deploy-production-now.sh",
-		"deploy:vercel": "vercel --prod",
-		"dev": "next dev",
-		"lint": "next lint",
-		"start": "next start",
-		"sync:github": "bash scripts/sync-github.sh",
-		"test": "jest",
-		"test:unit": "jest --testPathPattern=__tests__",
-		"test:integration": "jest --testPathPattern=tests/integration",
-		"test:api": "jest --testPathPattern=tests/api",
-		"test:e2e": "playwright test",
-		"test:performance": "node scripts/test-performance.js",
-		"test:security": "node scripts/test-security-headers.js",
-		"test:accessibility": "node scripts/test-accessibility.js",
-		"test:database": "node scripts/test-database.js",
-		"test:stripe": "node scripts/test-stripe.js",
-		"test:pwa": "node scripts/test-pwa-manifest.js && node scripts/test-service-worker.js",
-		"test:components": "node scripts/test-components.js",
-		"test:realtime": "node scripts/test-realtime.js",
-		"test:error-logger": "node scripts/test-error-logger.js",
-		"test:bundle": "node scripts/check-bundle-size.js",
-		"test:all": "npm run test && npm run test:e2e && npm run test:performance && npm run test:accessibility",
-		"test:workflows": "node scripts/test-complete-workflows.js",
-		"test:comprehensive-e2e": "node scripts/comprehensive-e2e-test.js",
-		"test:validate": "node scripts/ultimate-validation.js",
-		"test:production": "bash scripts/test-production.sh",
-		"type-check": "tsc --noEmit",
-		"validate:env": "node scripts/validate-env.js",
-		"check:supabase": "node scripts/check-supabase-config.js",
-		"validate:ui": "node scripts/validate-ui-foundation.js",
-		"setup:secrets": "bash scripts/setup-github-secrets.sh",
-		"deploy:prep": "bash scripts/deploy-production.sh",
-		"verify": "npm run type-check && npm run lint && npm run build",
-		"setup:testing": "bash scripts/setup-testing.sh"
-	},
-	"dependencies": {
-		"@emotion/is-prop-valid": "latest",
-		"@jest/globals": "30.2.0",
-		"drizzle-orm": "^0.45.1",
-		"@neondatabase/serverless": "^0.10.4",
-		"@octokit/rest": "22.0.1",
-		"@radix-ui/react-accordion": "^1.2.4",
-		"@radix-ui/react-alert-dialog": "^1.1.7",
-		"@radix-ui/react-aspect-ratio": "^1.1.3",
-		"@radix-ui/react-avatar": "^1.1.4",
-		"@radix-ui/react-checkbox": "^1.1.5",
-		"@radix-ui/react-collapsible": "^1.1.4",
-		"@radix-ui/react-context-menu": "^2.2.7",
-		"@radix-ui/react-dialog": "^1.1.7",
-		"@radix-ui/react-dropdown-menu": "^2.1.7",
-		"@radix-ui/react-hover-card": "^1.1.7",
-		"@radix-ui/react-label": "^2.1.3",
-		"@radix-ui/react-menubar": "^1.1.17-rc.1762290574118",
-		"@radix-ui/react-navigation-menu": "^1.2.6",
-		"@radix-ui/react-popover": "^1.1.7",
-		"@radix-ui/react-progress": "^1.1.3",
-		"@radix-ui/react-radio-group": "^1.2.4",
-		"@radix-ui/react-scroll-area": "^1.2.4",
-		"@radix-ui/react-select": "^2.1.7",
-		"@radix-ui/react-separator": "^1.1.3",
-		"@radix-ui/react-slider": "^1.2.4",
-		"@radix-ui/react-slot": "^1.2.0",
-		"@radix-ui/react-switch": "^1.1.4",
-		"@radix-ui/react-tabs": "^1.1.4",
-		"@radix-ui/react-toast": "^1.2.7",
-		"@radix-ui/react-toggle": "^1.1.3",
-		"@radix-ui/react-toggle-group": "^1.1.3",
-		"@radix-ui/react-tooltip": "^1.2.0",
-		"@stripe/react-stripe-js": "^4.0.2",
-		"@stripe/stripe-js": "^7.9.0",
-		"@supabase/ssr": "^0.5.2",
-		"@supabase/supabase-js": "^2.47.3",
-		"@tanstack/react-query": "^5.62.10",
-		"@vercel/analytics": "^1.5.0",
-		"@vite-pwa/assets-generator": "latest",
-		"@vitejs/plugin-react": "5.1.2",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"cmdk": "^1.1.1",
-		"date-fns": "^4.1.0",
-		"drizzle-zod": "^0.7.0",
-		"embla-carousel-react": "^8.6.0",
-		"express": "5.2.1",
-		"framer-motion": "^11.13.5",
-		"input-otp": "^1.4.2",
-		"jiti": "latest",
-		"leaflet": "^1.9.4",
-		"less": "latest",
-		"lightningcss": "latest",
-		"lucide-react": "^0.468.0",
-		"nanoid": "^5.1.5",
-		"next": "15.1.11",
-		"next-pwa": "^5.6.0",
-		"next-themes": "^0.4.6",
-		"react": "^19.0.0",
-		"react-day-picker": "^9.4.6",
-		"react-dom": "^19.0.0",
-		"react-hook-form": "^7.54.2",
-		"react-leaflet": "^4.2.1",
-		"react-resizable-panels": "4.0.15",
-		"recharts": "^2.15.2",
-		"sass": "latest",
-		"sass-embedded": "latest",
-		"ssh2": "1.17.0",
-		"ssh2-sftp-client": "12.0.1",
-		"stripe": "^18.5.0",
-		"stylus": "latest",
-		"sugarss": "latest",
-		"tailwind-merge": "^2.6.0",
-		"tailwindcss-animate": "^1.0.7",
-		"terser": "latest",
-		"tsx": "latest",
-		"vaul": "^1.1.2",
-		"vite": "7.3.0",
-		"vite-plugin-pwa": "1.2.0",
-		"workbox-build": "latest",
-		"workbox-precaching": "7.4.0",
-		"workbox-routing": "7.4.0",
-		"workbox-strategies": "7.4.0",
-		"workbox-window": "latest",
-		"wouter": "3.9.0",
-		"yaml": "latest",
-		"zod": "^3.24.2"
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.49.1",
-		"@tailwindcss/typography": "^0.5.15",
-		"@types/express": "^5.0.0",
-		"@types/leaflet": "^1.9.15",
-		"@types/minimatch": "^5.1.2",
-		"@types/node": "^22.10.6",
-		"@types/react": "^19.0.6",
-		"@types/react-dom": "^19.0.2",
-		"@types/ssh2": "^1.15.1",
-		"@types/ssh2-sftp-client": "^9.0.3",
-		"autoprefixer": "^10.4.22",
-		"dotenv": "^16.4.7",
-		"drizzle-kit": "^0.31.5",
-		"eslint": "^9.18.0",
-		"eslint-config-next": "^15.1.6",
-		"postcss": "^8.5.1",
-		"tailwindcss": "^3.4.17",
-		"typescript": "^5.7.2",
-		"vercel": "^40.0.2"
-	}
+  "name": "airbear-pwa",
+  "version": "2.0.0",
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "build": "NODE_ENV=production next build",
+    "db:push": "drizzle-kit push",
+    "deploy": "npm run verify && npm run deploy:vercel",
+    "deploy:production": "bash deploy.sh",
+    "deploy:now": "bash scripts/deploy-production-now.sh",
+    "deploy:vercel": "vercel --prod",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start",
+    "sync:github": "bash scripts/sync-github.sh",
+    "test": "jest",
+    "test:unit": "jest --testPathPattern=__tests__",
+    "test:integration": "jest --testPathPattern=tests/integration",
+    "test:api": "jest --testPathPattern=tests/api",
+    "test:e2e": "playwright test",
+    "test:performance": "node scripts/test-performance.js",
+    "test:security": "node scripts/test-security-headers.js",
+    "test:accessibility": "node scripts/test-accessibility.js",
+    "test:database": "node scripts/test-database.js",
+    "test:stripe": "node scripts/test-stripe.js",
+    "test:pwa": "node scripts/test-pwa-manifest.js && node scripts/test-service-worker.js",
+    "test:components": "node scripts/test-components.js",
+    "test:realtime": "node scripts/test-realtime.js",
+    "test:error-logger": "node scripts/test-error-logger.js",
+    "test:bundle": "node scripts/check-bundle-size.js",
+    "test:all": "npm run test && npm run test:e2e && npm run test:performance && npm run test:accessibility",
+    "test:workflows": "node scripts/test-complete-workflows.js",
+    "test:comprehensive-e2e": "node scripts/comprehensive-e2e-test.js",
+    "test:validate": "node scripts/ultimate-validation.js",
+    "test:production": "bash scripts/test-production.sh",
+    "type-check": "tsc --noEmit",
+    "validate:env": "node scripts/validate-env.js",
+    "check:supabase": "node scripts/check-supabase-config.js",
+    "validate:ui": "node scripts/validate-ui-foundation.js",
+    "setup:secrets": "bash scripts/setup-github-secrets.sh",
+    "deploy:prep": "bash scripts/deploy-production.sh",
+    "verify": "npm run type-check && npm run lint && npm run build",
+    "setup:testing": "bash scripts/setup-testing.sh"
+  },
+  "dependencies": {
+    "@emotion/is-prop-valid": "latest",
+    "@jest/globals": "30.2.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@octokit/rest": "22.0.1",
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
+    "@radix-ui/react-aspect-ratio": "^1.1.3",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-context-menu": "^2.2.7",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-hover-card": "^1.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-menubar": "^1.1.17-rc.1762290574118",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slider": "^1.2.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
+    "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-toast": "^1.2.7",
+    "@radix-ui/react-toggle": "^1.1.3",
+    "@radix-ui/react-toggle-group": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.0",
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.3",
+    "@tanstack/react-query": "^5.62.10",
+    "@vercel/analytics": "^1.5.0",
+    "@vite-pwa/assets-generator": "latest",
+    "@vitejs/plugin-react": "5.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.45.1",
+    "drizzle-zod": "^0.7.0",
+    "embla-carousel-react": "^8.6.0",
+    "express": "5.2.1",
+    "framer-motion": "^11.13.5",
+    "input-otp": "^1.4.2",
+    "jiti": "latest",
+    "leaflet": "^1.9.4",
+    "less": "latest",
+    "lightningcss": "latest",
+    "lucide-react": "^0.468.0",
+    "nanoid": "^5.1.5",
+    "next": "^15.1.11",
+    "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-day-picker": "^9.4.6",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-leaflet": "^4.2.1",
+    "react-resizable-panels": "4.0.15",
+    "recharts": "^2.15.2",
+    "sass": "latest",
+    "sass-embedded": "latest",
+    "ssh2": "1.17.0",
+    "ssh2-sftp-client": "12.0.1",
+    "stripe": "^18.5.0",
+    "stylus": "latest",
+    "sugarss": "latest",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "terser": "latest",
+    "tsx": "latest",
+    "vaul": "^1.1.2",
+    "vite": "7.3.0",
+    "vite-plugin-pwa": "1.2.0",
+    "workbox-build": "latest",
+    "workbox-precaching": "7.4.0",
+    "workbox-routing": "7.4.0",
+    "workbox-strategies": "7.4.0",
+    "workbox-window": "latest",
+    "wouter": "3.9.0",
+    "yaml": "latest",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.49.1",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/express": "^5.0.0",
+    "@types/leaflet": "^1.9.15",
+    "@types/minimatch": "^5.1.2",
+    "@types/node": "^22.10.6",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.0",
+    "@types/ssh2": "^1.15.1",
+    "@types/ssh2-sftp-client": "^9.0.3",
+    "autoprefixer": "^10.4.22",
+    "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.18.1",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.6",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
+    "vercel": "^25.2.0"
+  }
 }
