🗺️ Implement comprehensive CodeMaps system
✨ Features:
- Complete source map generation for all TS/JS files
- Component mapping for 69 React components
- API route documentation for 24 endpoints
- Utility mapping for 22 functions
- Automated validation system

🔧 Configuration:
- Next.js source map configuration
- TypeScript source mapping setup
- VS Code debugging integration
- Chrome DevTools support
- Playwright testing integration

📊 Generated Output:
- .next/codemaps/ with complete mappings
- Component catalog with types and sizes
- API route documentation with methods
- Utility function catalog
- Validation reports and statistics

🚀 Benefits:
- Enhanced debugging experience
- Better error tracking
- Production source maps
- Improved development workflow
- Comprehensive code documentation

📈 Stats:
- 69 components mapped
- 24 API routes documented
- 22 utilities cataloged
- 0 validation errors
- Complete coverage achieved

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "test:components": "node scripts/test-components.js",
     "test:realtime": "node scripts/test-realtime.js",
     "test:error-logger": "node scripts/test-error-logger.js",
+    "codemaps:generate": "node scripts/generate-codemaps.cjs",
+    "codemaps:validate": "node scripts/validate-codemaps.cjs",
+    "codemaps:deploy": "npm run codemaps:generate && npm run deploy",
+    "verify": "npm run lint && npm run test:unit && npm run codemaps:validate",
     "test:bundle": "node scripts/check-bundle-size.js",
     "test:all": "npm run test && npm run test:e2e && npm run test:performance && npm run test:accessibility",
     "test:workflows": "node scripts/test-complete-workflows.js",
