--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,25 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true,
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+  "typescript.preferences.includePackageJsonAutoImports": "on",
+  "typescript.suggest.autoImports": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "sourceMaps": true,
+  "typescript.preferences.importModuleSpecifier": "relative",
+  "editor.codeLens": true,
+  "editor.inlayHints.enabled": "on",
+  "debug.allowBreakpointsEverywhere": true,
+  "debug.inlineBreakpointSuppress": false,
+  "debug.javascript.autoAttachFilter": "smart",
+  "debug.javascript.terminalOptions": {
+    "skipFiles": [
+      "<node_internals>/**"
+    ]
   },
-  "files.exclude": {
-    "**/.git": true,
-    "**/.next": true,
-    "**/node_modules": true,
-    "**/.DS_Store": true
+  "typescript.preferences.includePackageJsonAutoImports": "auto",
+  "files.associations": {
+    "*.json": "jsonc"
   },
-  "search.exclude": {
-    "**/node_modules": true,
-    "**/.next": true,
-    "**/dist": true,
-    "**/build": true
+  "emmet.includeLanguages": {
+    "typescript": "html",
+    "typescriptreact": "html"
   }
 }
