Clean environment variables and setup automation scripts
- Remove 25+ outdated/duplicate environment variables from Vercel
- Create clean .env.local with only essential variables
- Add automation scripts for environment setup and deployment
- Update validation script to use correct variable names
- Add comprehensive setup documentation
- Remove all sensitive keys from documentation for security

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
     "mapRoot": "/_next/codemaps"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "client", "server", "functions", "supabase"]
+  "exclude": ["node_modules", "client", "server", "functions", "supabase", "__tests__", "**/*.test.*", "**/*.spec.*"]
 }
