--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "npm run codemaps:generate && NODE_ENV=production next build",
     "db:push": "drizzle-kit push",
     "deploy": "npm run verify && npm run deploy:vercel",
-    "deploy:production": "bash deploy.sh",
     "deploy:now": "bash scripts/deploy-production-now.sh",
     "deploy:vercel": "vercel --prod",
     "dev": "next dev",
@@ -37,6 +36,7 @@
     "codemaps:deploy": "npm run codemaps:generate && npm run deploy",
     "verify": "npm run type-check && npm run lint && npm run codemaps:validate && npm run build",
     "validate:comprehensive": "node scripts/comprehensive-validator.cjs",
+    "validate:focused": "node scripts/focused-validator.cjs",
     "test:bundle": "node scripts/check-bundle-size.js",
     "test:all": "npm run test && npm run test:e2e && npm run test:performance && npm run test:accessibility",
     "test:workflows": "node scripts/test-complete-workflows.js",
@@ -47,6 +47,9 @@
     "validate:env": "node scripts/validate-env.js",
     "check:supabase": "node scripts/check-supabase-config.js",
     "validate:ui": "node scripts/validate-ui-foundation.js",
+    "setup:environment": "bash scripts/setup-environment.sh",
+    "clean:env": "bash scripts/clean-env.sh",
+    "deploy:production": "bash scripts/deploy-production.sh",
     "setup:secrets": "bash scripts/setup-github-secrets.sh",
     "deploy:prep": "bash scripts/deploy-production.sh",
     "verify:full": "npm run type-check && npm run lint && npm run build",
