🚗 Add complete rideshare payment flow with booking fixes
✅ Features:
- Professional payment screen after booking
- Multiple payment options (Card, Digital Wallets, Cash)
- Visual ride summary with route and fare
- Mobile-first rideshare-style interface
- Fixed authentication issues in booking
- Fixed database schema for rides table

🔧 Technical:
- Updated one-click-booking to use authenticated API
- Fixed AirBear assignment logic order
- Added RidePayment component with Stripe integration
- Enhanced booking flow with payment confirmation
- Fixed rides table schema issues

🎯 User Experience:
- Seamless booking → payment flow
- .00 flat rate display
- ETA and route visualization
- Professional rideshare app experience

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "setup:environment": "bash scripts/setup-environment.sh",
     "clean:env": "bash scripts/clean-env.sh",
     "deploy:production": "bash scripts/deploy-production.sh",
+    "fix:database": "bash scripts/fix-database-schema.sh",
     "setup:secrets": "bash scripts/setup-github-secrets.sh",
     "deploy:prep": "bash scripts/deploy-production.sh",
     "verify:full": "npm run type-check && npm run lint && npm run build",
