Add ESLint configuration for Next.js 15 compatibility
✅ ESLINT CONFIGURATION:
- Migrated to eslint.config.mjs for Next.js 15
- Added ES module compatibility with __filename and __dirname
- Configured FlatCompat for legacy config support
- Extended next/core-web-vitals and next configurations
- Added proper ignores for build artifacts

🔧 TECHNICAL DETAILS:
- Uses node:path and node:url for ES modules
- Maintains compatibility with existing rules
- Ignores .next, node_modules, coverage, dist
- Ready for production deployment

🚀 DEPLOYMENT READY:
- ESLint configuration complete
- No warnings or errors in codebase
- Ready for Vercel deployment to airbear.me

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy:now": "bash scripts/deploy-production-now.sh",
     "deploy:vercel": "vercel --prod",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "eslint . --max-warnings 0",
     "start": "next start",
     "sync:github": "bash scripts/sync-github.sh",
     "test": "jest",
