--- a/package.json
+++ b/package.json
@@ -156,6 +156,8 @@
     "@types/react-dom": "^18.3.0",
     "@types/ssh2": "^1.15.1",
     "@types/ssh2-sftp-client": "^9.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
     "autoprefixer": "^10.4.22",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.18.1",
