--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "npm run codemaps:generate",
     "build:next": "NODE_ENV=production next build",
+    "auto:run": "bash scripts/auto-run.sh",
+    "auto:deploy": "bash scripts/auto-deploy.sh",
     "db:push": "drizzle-kit push",
     "deploy": "npm run verify && npm run deploy:vercel",
     "deploy:now": "bash scripts/deploy-production-now.sh",
@@ -133,7 +135,6 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "terser": "latest",
-    "tsx": "latest",
     "vaul": "^1.1.2",
     "vite": "7.3.0",
     "vite-plugin-pwa": "1.2.0",
@@ -161,12 +162,10 @@
     "@typescript-eslint/parser": "^8.52.0",
     "autoprefixer": "^10.4.22",
     "dotenv": "^16.4.7",
-    "drizzle-kit": "^0.18.1",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.6",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "vercel": "^25.2.0"
+    "typescript": "^5.7.2"
   }
 }
