--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ develop ]
   pull_request:
     branches: [ main, develop ]
   workflow_dispatch:
@@ -186,7 +186,7 @@ jobs:
     name: Build & Deploy
     runs-on: ubuntu-latest
     needs: [quality, test-unit, test-integration, test-e2e, test-pwa, security]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -200,14 +200,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Generate codemaps
-        run: npm run codemaps:generate
-
-      - name: Build application
-        run: npm run build
+      - name: Full preflight verification
+        run: npm run auto:run
 
       - name: Deploy to Vercel
-        run: npm run deploy:vercel
+        run: |
+          npm i -g vercel
+          vercel --prod --yes
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -218,7 +217,7 @@ jobs:
     name: Performance Tests
     runs-on: ubuntu-latest
     needs: [build-deploy]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -240,7 +239,7 @@ jobs:
     name: Accessibility Tests
     runs-on: ubuntu-latest
     needs: [build-deploy]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
