feat: restore dark mode and beautiful UI effects
- Fix tailwind.config.ts that was accidentally emptied
- Add ThemeProvider to layout.tsx with dark mode default
- Add theme toggle button to map page
- Restore all AirBear special effects and animations
- Enhance dark mode colors for better contrast
- Add script to prevent flash of light theme
- Update middleware.ts to proxy.ts for Next.js 16 compatibility

Restores beautiful dark UI/UX with all special effects working

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm run codemaps:generate
 
       - name: Build application
-        run: npm run build:next
+        run: npm run build
 
       - name: Upload npm logs (on failure)
         if: failure()
