--- a/package.json
+++ b/package.json
@@ -59,112 +59,88 @@
     "setup:testing": "bash scripts/setup-testing.sh"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "latest",
-    "@jest/globals": "30.2.0",
-    "@neondatabase/serverless": "^0.10.4",
-    "@octokit/rest": "22.0.1",
-    "@radix-ui/react-accordion": "^1.2.4",
-    "@radix-ui/react-alert-dialog": "^1.1.7",
-    "@radix-ui/react-aspect-ratio": "^1.1.3",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-checkbox": "^1.1.5",
-    "@radix-ui/react-collapsible": "^1.1.4",
-    "@radix-ui/react-context-menu": "^2.2.7",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-hover-card": "^1.1.7",
-    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-menubar": "^1.1.17-rc.1762290574118",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-radio-group": "^1.2.4",
-    "@radix-ui/react-scroll-area": "^1.2.4",
-    "@radix-ui/react-select": "^2.1.7",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slider": "^1.2.4",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.1.4",
-    "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-toast": "^1.2.7",
-    "@radix-ui/react-toggle": "^1.1.3",
-    "@radix-ui/react-toggle-group": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.2.0",
-    "@stripe/react-stripe-js": "^4.0.2",
-    "@stripe/stripe-js": "^7.9.0",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.3",
-    "@tanstack/react-query": "^5.62.10",
-    "@vercel/analytics": "^1.5.0",
-    "@vite-pwa/assets-generator": "latest",
-    "@vitejs/plugin-react": "5.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.1",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.90.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.90.16",
+    "@types/use-sync-external-store": "^1.5.0",
+    "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
-    "drizzle-zod": "^0.7.0",
+    "drizzle-zod": "^0.8.3",
     "embla-carousel-react": "^8.6.0",
-    "express": "5.2.1",
-    "framer-motion": "^11.13.5",
+    "framer-motion": "^12.24.12",
     "input-otp": "^1.4.2",
-    "jiti": "latest",
     "leaflet": "^1.9.4",
-    "less": "latest",
-    "lightningcss": "latest",
-    "lucide-react": "^0.468.0",
-    "nanoid": "^5.1.5",
-    "next": "^15.1.11",
-    "next-pwa": "^5.6.0",
+    "lucide-react": "^0.562.0",
+    "nanoid": "^5.1.6",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-day-picker": "^9.4.6",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-leaflet": "^4.2.1",
-    "react-resizable-panels": "4.0.15",
-    "recharts": "^2.15.2",
-    "sass": "latest",
-    "sass-embedded": "latest",
+    "react": "^19.2.3",
+    "react-day-picker": "^9.13.0",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.70.0",
+    "react-leaflet": "^5.0.0",
+    "recharts": "^3.6.0",
     "ssh2": "1.17.0",
     "ssh2-sftp-client": "12.0.1",
-    "stripe": "^18.5.0",
-    "stylus": "latest",
-    "sugarss": "latest",
-    "tailwind-merge": "^2.6.0",
+    "stripe": "^20.1.2",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "terser": "latest",
     "vaul": "^1.1.2",
-    "vite": "7.3.0",
-    "vite-plugin-pwa": "1.2.0",
-    "workbox-build": "latest",
-    "workbox-precaching": "7.4.0",
-    "workbox-routing": "7.4.0",
-    "workbox-strategies": "7.4.0",
-    "workbox-window": "latest",
-    "wouter": "3.9.0",
-    "yaml": "latest",
-    "zod": "^3.24.2"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@playwright/test": "^1.49.1",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/express": "^5.0.0",
-    "@types/leaflet": "^1.9.15",
-    "@types/minimatch": "^5.1.2",
-    "@types/node": "^22.10.6",
-    "@types/react": "^18.3.17",
-    "@types/react-dom": "^18.3.0",
-    "@types/ssh2": "^1.15.1",
-    "@types/ssh2-sftp-client": "^9.0.3",
+    "@jest/globals": "^30.2.0",
+    "@playwright/test": "^1.57.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/leaflet": "^1.9.21",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/ssh2": "^1.15.5",
+    "@types/ssh2-sftp-client": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
-    "autoprefixer": "^10.4.22",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.18.0",
-    "eslint-config-next": "^15.1.6",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "autoprefixer": "^10.4.23",
+    "dotenv": "^17.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
+    "jest": "^30.2.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   }
 }
