trigger: update deployment timestamp to force Vercel redeploy

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "test:comprehensive-e2e": "node scripts/comprehensive-e2e-test.js",
     "test:validate": "node scripts/ultimate-validation.js",
     "test:production": "bash scripts/test-production.sh",
+    "description": "Solar-powered rideshare PWA with mobile bodega functionality - Deployed: 2026-01-09T04:30:00Z",
     "type-check": "tsc --noEmit",
     "validate:env": "node scripts/validate-env.js",
     "check:supabase": "node scripts/check-supabase-config.js",
