--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,15 @@
 	],
 	"headers": [
 		{
+			"source": "/(.*)",
+			"headers": [
+				{
+					"key": "Cache-Control",
+					"value": "no-cache, no-store, must-revalidate"
+				}
+			]
+		},
+		{
 			"source": "/api/(.*)",
 			"headers": [
 				{
