--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-	"buildCommand": "npm run build",
+	"buildCommand": "npm run build && echo 'BUILD_TIMESTAMP=$(date)' > .build-info",
 	"framework": "nextjs",
 	"regions": ["iad1"],
 	"rewrites": [
